[package]
name = "eigen_crypto"
version = "0.1.1"
authors = ["stephen@ieigen.com"]
edition = "2018"
license = "Apache-2.0"
description = "Crypto Library for EigenCC."

[features]
default = ["ucrypto", "alloc"]
#default = ["mesalock_sgx"]
mesalock_sgx = [
    "sgx_tstd",
    "sgx_libc",
    "ring-sgx",
    "rand-sgx",
    "num-bigint-sgx",
    "rust-base58-sgx",
    "rust-crypto-sgx",
    "serde-sgx",
    "serde_derive-sgx",
    "lazy_static",
    "num-traits-sgx",
    "num-integer-sgx",
    "untrusted-sgx",
    "bytes-sgx",
    "regex-sgx"
]
ucrypto = [
    "ring",
    "rand",
    "num-bigint",
    "rust-base58",
    "rust-crypto",
    "serde",
    "serde_derive",
    "rand_chacha",
    "lazy_static",
    "num-traits",
    "num-integer",
    "untrusted",
    "libc",
    "bytes",
    "regex"
]
alloc = []

[dependencies]
sgx_tstd = { rev = "v1.1.2", version = "1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["untrusted_fs"] }
sgx_libc = { rev = "v1.1.2", version = "1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

ring-sgx = { git = "https://github.com/mesalock-linux/ring-sgx", branch="v1.1.2-backup", optional = true, package = "ring", version = "0.16.9" }
rand-sgx = { path = "./third_party/rand-sgx", optional = true, package = "rand", version = "0.7.2" }
num-bigint-sgx = { path = "./third_party/num-bigint-sgx", features = ["serde"], optional = true, package = "num-bigint", version = "0.2.3" }
rust-base58-sgx =  {  path = "./third_party/rust-base58-sgx", optional = true, package = "rust-base58", version = "0.0.4" }
rust-crypto-sgx = { path = "./third_party/rust-crypto-sgx", optional = true, package = "rust-crypto", version = "0.2.36" }
serde-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], branch = "v1.1.2-backup", optional = true, package = "serde", version = "1.0.104" }
serde_derive-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde_derive', optional = true, branch = "v1.1.2-backup", version = "1.0.104" }
num-traits-sgx = { git = "https://github.com/mesalock-linux/num-traits-sgx", branch = "v1.1.2-backup", optional = true, package = "num-traits", version = "0.2.10" }
num-integer-sgx = {  path = "./third_party/num-integer-sgx", optional = true, package = "num-integer", version = "0.1.41" }
untrusted-sgx = { git = "https://github.com/briansmith/untrusted", tag = "ring-master", optional = true, package = "untrusted", version = "0.6.2" }
bytes-sgx = { git = "https://github.com/mesalock-linux/bytes-sgx", branch="v1.1.2-backup", optional = true, package = "bytes", version = "0.5.4" }
regex-sgx = {  path = "./third_party/regex-sgx", optional = true, package = "regex", version = "1" }

ring         = { version = "0.16.9", optional = true }
rand         = { version = "0.7.2", optional = true }
num-bigint   = { version = "0.2.3", features = ["serde"], optional = true }
rust-base58  = { version = "0.0.4", optional = true }
rust-crypto  = { version = "0.2.36", optional = true }
serde        = { version = "1.0.104", features = ["derive"], optional = true}
serde_derive = { version = "1.0.104", optional = true}
rand_chacha  = { version = "0.2.1", optional = true }
num-traits   = { version = "0.2.10", optional = true }
num-integer  = { version = "0.1.41", optional = true }
untrusted    = { version = "0.7.0", optional = true }
libc         = { version = "0.2.69", optional = true }
bytes        = { version = "0.4.12", optional = true } # unix app depends on 0.4.12, while sgx lib depends on 0.5.0
regex        = { version = "1", optional = true }
lazy_static  = { version = "1.4.0", optional = true }

#[target.'cfg(not(target_env = "sgx"))'.dependencies]
#sgx_tstd    = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
#sgx_types   = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }


[dev-dependencies]
hex = "0.4.0"
base64 = "0.12.1"
