[package]
name = "eigen_crypto"
version = "0.1.2"
authors = ["stephen@ieigen.com"]
edition = "2018"
license = "Apache-2.0"
description = "Crypto Library for EigenCC."

[features]
#default = ["ucrypto", "alloc"]
default = ["mesalock_sgx"]
mesalock_sgx = [
    "sgx_tstd",
    "sgx_libc",
    "ring-sgx",
    "rand-sgx",
    "num-bigint-sgx",
    "rust-base58-sgx",
    "rust-crypto-sgx",
    "serde-sgx",
    "serde_derive-sgx",
    "lazy_static",
    "num-traits-sgx",
    "num-integer-sgx",
    "untrusted-sgx",
    "bytes-sgx",
    "regex-sgx"
]
#ucrypto = [
#    "ring",
#    "rand",
#    "num-bigint",
#    "rust-base58",
#    "rust-crypto",
#    "serde",
#    "serde_derive",
#    "rand_chacha",
#    "lazy_static",
#    "num-traits",
#    "num-integer",
#    "untrusted",
#    "libc",
#    "bytes",
#    "regex"
#]
#alloc = []

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["untrusted_fs"] }
sgx_libc = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

ring-sgx = { git = "https://github.com/mesalock-linux/ring-sgx", optional = true, package = "ring", tag="v0.16.5" }
rand-sgx = { git = "https://github.com/mesalock-linux/rand-sgx", optional = true, package = "rand" }
num-bigint-sgx = { git = "https://github.com/mesalock-linux/num-bigint-sgx", features = ["serde"], optional = true, package = "num-bigint" }
rust-base58-sgx =  {  git = "https://github.com/mesalock-linux/rust-base58-sgx", optional = true, package = "rust-base58" }
rust-crypto-sgx = { git = "https://github.com/mesalock-linux/rust-crypto-sgx", optional = true, package = "rust-crypto" }
serde-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], optional = true, package = "serde" }
serde_derive-sgx = { git = "https://github.com/mesalock-linux/serde-sgx", package = 'serde_derive', optional = true }
num-traits-sgx = { git = "https://github.com/mesalock-linux/num-traits-sgx", optional = true, package = "num-traits" }
num-integer-sgx = {  git = "https://github.com/mesalock-linux/num-integer-sgx", optional = true, package = "num-integer" }
untrusted-sgx = { git = "https://github.com/briansmith/untrusted", tag = "ring-master", optional = true, package = "untrusted" }
bytes-sgx = { git = "https://github.com/mesalock-linux/bytes-sgx", optional = true, package = "bytes" }
regex-sgx = {  git = "https://github.com/mesalock-linux/regex-sgx", optional = true, package = "regex" }

#ring         = { version = "0.16.5", optional = true }
#rand         = { version = "0.7.2", optional = true }
#num-bigint   = { version = "0.2.3", features = ["serde"], optional = true }
#rust-base58  = { version = "0.0.4", optional = true }
#rust-crypto  = { version = "0.2.36", optional = true }
#serde        = { version = "1.0.104", features = ["derive"], optional = true}
#serde_derive = { version = "1.0.104", optional = true}
#rand_chacha  = { version = "0.2.1", optional = true }
#num-traits   = { version = "0.2.10", optional = true }
#num-integer  = { version = "0.1.41", optional = true }
#untrusted    = { version = "0.7.0", optional = true }
#libc         = { version = "0.2.69", optional = true }
#bytes        = { version = "0.5.4", optional = true } # unix app depends on 0.4.12, while sgx lib depends on 0.5.0
#regex        = { version = "1", optional = true }
lazy_static  = { version = "1.4.0", optional = true }


[dev-dependencies]
hex = "0.4.0"
base64 = "0.12.1"
