[package] 
name = "run-tests-enclave"
version = "1.0.0"
edition = "2018"

[lib]	
name = "run_tests_enclave"	
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx", "with-serde"]
with-serde = []
mesalock_sgx = ["sgx_tstd"]

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
eigen_crypto    = { path = "../../", features = ['mesalock_sgx'] }
rand            = { git = "https://github.com/mesalock-linux/rand-sgx" }
untrusted = { git = "https://github.com/briansmith/untrusted", tag = "ring-master"  }
#rand_core       = { git = "https://github.com/mesalock-linux/rand-sgx" }
hex             = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
serde_json      =  { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde_derive    = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde           = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
lazy_static     = { version = "1.2", features = ["spin_no_std"] }
sgx_types       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true  }
sgx_libc 	= { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
